<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TasksViewForEmployee</class>
 <widget class="QDialog" name="TasksViewForEmployee">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1280</width>
    <height>720</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Tasks</string>
  </property>
  <widget class="QPushButton" name="backBtn">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>20</y>
     <width>171</width>
     <height>81</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Back</string>
   </property>
  </widget>
  <widget class="QTableView" name="tasksTableView">
   <property name="geometry">
    <rect>
     <x>589</x>
     <y>20</y>
     <width>661</width>
     <height>671</height>
    </rect>
   </property>
  </widget>
  <widget class="QLineEdit" name="idLineEdit">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>610</y>
     <width>171</width>
     <height>81</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Task Id</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QPushButton" name="completeBtn">
   <property name="geometry">
    <rect>
     <x>210</x>
     <y>610</y>
     <width>171</width>
     <height>81</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Mark as
complete</string>
   </property>
  </widget>
  <widget class="QPushButton" name="reportBtn">
   <property name="geometry">
    <rect>
     <x>400</x>
     <y>610</y>
     <width>171</width>
     <height>81</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Create report</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
